--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -1,10 +1,10 @@
-{% extends 'store/base.html' %}
-{%load static%}
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Интернет-магазин здоровых продуктов</title>
+<head>
+    {% block title %} <!-- Блок для названия страницы-->
+    {% endblock %}
+    {% block head %} <!-- Блок ссылок в head-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -15,7 +15,7 @@
 	<link type="image/x-icon" href="{% static 'store/images/favicon.png' %}" rel="shortcut icon">
     <link rel="stylesheet" href="{% static 'store/css/open-iconic-bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'store/css/animate.css' %}">
-    
+
     <link rel="stylesheet" href="{% static 'store/css/owl.carousel.min.css' %}">
     <link rel="stylesheet" href="{% static 'store/css/owl.theme.default.min.css' %}">
     <link rel="stylesheet" href="{% static 'store/css/magnific-popup.css' %}">
@@ -27,13 +27,15 @@
     <link rel="stylesheet" href="{% static 'store/css/bootstrap-datepicker.css' %}">
     <link rel="stylesheet" href="{% static 'store/css/jquery.timepicker.css' %}">
 
-    
+
     <link rel="stylesheet" href="{% static 'store/css/flaticon.css' %}">
     <link rel="stylesheet" href="{% static 'store/css/icomoon.css' %}">
     <link rel="stylesheet" href="{% static 'store/css/style.css' %}">
-  </head>
-  <body class="goto-here">
-  	<div class="py-1 bg-primary">
+    {% endblock %}
+</head>
+<body class="goto-here">
+    {% block header %} <!-- Блок для header страницы с данными магазина-->
+	<div class="py-1 bg-primary">
 		<div class="container">
     		<div class="row no-gutters d-flex align-items-start align-items-center px-md-0">
 	    		<div class="col-lg-12 d-block">
@@ -52,114 +54,36 @@
 				    </div>
 			    </div>
 		    </div>
-		  </div>
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-	    <div class="container">
-	      <a class="navbar-brand" href="#">Vegefoods</a>
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Навигация
-	      </button>
-
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="shop.html" class="nav-link">Магазин</a>
-			  <li class="nav-item"><a href="wishlist.html" class="nav-link">Избранное</a>
-			  <li class="nav-item"><a href="cart.html" class="nav-link">Корзина</a>
-			  <li class="nav-item"><a href="login.html" class="nav-link">Войти в аккаунт</a>
-	        </ul>
-	      </div>
-	    </div>
-	  </nav>
-    <!-- END nav -->
-
-    <div class="hero-wrap hero-bread" style="background-image: url({% static 'store/images/bg_1.jpg' %});">
-      <div class="container">
-        <div class="row no-gutters slider-text align-items-center justify-content-center">
-          <div class="col-md-9 ftco-animate text-center">
-          	<p class="breadcrumbs"><span class="mr-2"></span></p>
-            <h1 class="mb-0 bread">Продукты</h1>
-          </div>
         </div>
-      </div>
     </div>
+    {% endblock %}
 
-    <section class="ftco-section">
-    	<div class="container">
-    		<div class="row justify-content-center">
-    			<div class="col-md-10 mb-5 text-center">
-    				<ul class="product-category">
-    					<li><a href="#" class="active">Все</a></li>
-    					<li><a href="#">Овощи</a></li>
-    					<li><a href="#">Фрукты</a></li>
-    					<li><a href="#">Соки</a></li>
-    					<li><a href="#">Семена</a></li>
-    				</ul>
-    			</div>
-    		</div>
-    		<div class="row">
-				{% for product in products %}
-    			<div class="col-md-6 col-lg-3 ftco-animate">
-    				<div class="product">
-    					<a href="{% url 'store:products_page_view' product.html %}" class="img-prod">
-							<img class="img-fluid" src="{% static product.url %}" alt="Colorlib Template">
-							{% if product.discount %}
-    						<span class="status">{{product.discount}}%</span>
-							{% else %}
-    						<div class="overlay"></div>
-							{% endif %}
-    					</a>
-    					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">{{product.name}}</a></h3>
-    						<div class="d-flex">
-    							<div class="pricing">
-		    						<p class="price">
-										{% if product.discount %}
-										<span class="mr-2 price-dc">&#x20bd {{product.price_before}}</span>
-										<span class="price-sale">&#x20bd {{product.price_after}}</span>
-										{% else %}
-										<span>&#x20bd {{product.price_before}}</span>
-										{% endif %}
-									</p>
-		    					</div>
-	    					</div>
-	    					<div class="bottom-area d-flex px-3">
-	    						<div class="m-auto d-flex">
-	    							<a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center" data-product-id="1">
-	    								<span><i class="ion-ios-add-circle-outline" data-product-id="1"></i></span>
-	    							</a>
-	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-	    								<span><i class="ion-ios-cart"></i></span>
-	    							</a>
-	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
-	    								<span><i class="ion-ios-heart-empty" data-product-id="1" data-state="inactive" data-action="toggle"></i></span>
-	    							</a>
-    							</div>
-								<div class="custom-popup-message" data-product-id="1"></div>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-				{% endfor %}
-    		</div>
-    		<div class="row mt-5">
-          <div class="col text-center">
-            <div class="block-27">
-              <ul>
-                <li><a href="#">&lt;</a></li>
-                <li class="active"><span>1</span></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">&gt;</a></li>
-              </ul>
+    {% block nav %} <!-- Блок для навигационной панели страницы магазина-->
+     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+            <div class="container">
+              <a class="navbar-brand" href="#">Vegefoods</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Навигация
+              </button>
+
+              <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item"><a href="shop.html" class="nav-link">Магазин</a>
+                  <li class="nav-item"><a href="wishlist.html" class="nav-link">Избранное</a>
+                  <li class="nav-item"><a href="cart.html" class="nav-link">Корзина</a>
+                  <li class="nav-item"><a href="login.html" class="nav-link">Войти в аккаунт</a>
+                </ul>
+              </div>
             </div>
-          </div>
-        </div>
-    	</div>
-    </section>
+          </nav>
+        <!-- END nav -->
+    {% endblock %}
 
+    {% block content %} <!-- Блок для уникального содержимого страницы-->
+
+    {% endblock %}
+
+    {% block news %} <!-- Блок для новостной панели-->
 	<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
       <div class="container py-4">
         <div class="row d-flex justify-content-center py-5">
@@ -178,6 +102,9 @@
         </div>
       </div>
     </section>
+    {% endblock %}
+
+    {% block footer %} <!-- Блок для нижней панели страницы-->
     <footer class="ftco-footer ftco-section">
       <div class="container">
       	<div class="row">
@@ -251,9 +178,9 @@
         </div>
       </div>
     </footer>
-    
-  
+    {% endblock %}
 
+    {% block scripts %} <!-- Блок для загрузки javascript страницы-->
   	<!-- loader -->
   	<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
@@ -274,6 +201,10 @@
   	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   	<script src="{% static 'store/js/google-map.js' %}"></script>
   	<script src="{% static 'store/js/main.js' %}"></script>
-    
-  </body>
+    {% endblock %}
+
+    {% block custom_scripts %}  <!-- Блок для загрузки дополнительного кода встроенного в html-->
+
+    {% endblock %}
+</body>
 </html>
