Попытка представления представление coupon_check_view

--- a/store/templates/store/shop.html
+++ b/store/templates/store/shop.html
@@ -1,4 +1,4 @@
-{% extends 'store/base.html' %}
+вс{% extends 'store/base.html' %}
 {%load static%}
 
 {% block title %} <!-- Блок для названия страницы-->
