--- a/store/templates/store/shop.html
+++ b/store/templates/store/shop.html
@@ -1,4 +1,4 @@
-вс{% extends 'store/base.html' %}
+{% extends 'store/base.html' %}
 {%load static%}
 
 {% block title %} <!-- Блок для названия страницы-->
