--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -69,7 +69,7 @@
               <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item"><a href="{%url 'store:shop_view'%}" class="nav-link">Магазин</a>
-                  <li class="nav-item"><a href="{%url 'wishlist:wishlist.html'}" class="nav-link">Избранное</a>
+                  <li class="nav-item"><a href="{%url 'wishlist:wishlist_view'%}" class="nav-link">Избранное</a>
                   <li class="nav-item"><a href="{%url 'store:cart_view'%}" class="nav-link">Корзина</a>
 <!--                  <li class="nav-item"><a href="{% url 'app_login:login_view'%}" class="nav-link">Войти в аккаунт</a>-->
                     {% if user.username %}
